[project]
name = "bsoykabot"
version = "0.5.3"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "pywikibot>=10.2.0",
    "sentry-sdk>=2.32.0",
]

[dependency-groups]
dev = [
    "bump-my-version>=1.2.0",
    "commitizen>=4.8.3",
    "hatchling>=1.27.0",
    "poethepoet>=0.36.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.2",
]

[project.scripts]
bsoykabot = "bsoykabot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.tasks]
bump = "bump-my-version bump"
check = "pre-commit run --all-files"
commit = "cz commit"
coverage = "pytest --cov=tasks --cov-branch --cov-report=xml"
lock = "uv lock"
login = "pwb generate_user_files"
precommit = "pre-commit install"
run = "bsoykabot"
sync = "uv sync --all-extras --dev"
test = "pytest"

[tool.ruff.lint]
select = [
    "A", "ANN", "ARG", "B", "BLE", "C4", "D", "E", "EM", "ERA", "FBT", "FIX", "FLY",
    "FURB", "I", "ICN", "INP", "ISC", "N", "PERF", "PIE", "PLC", "PLE", "PLR", "PLW",
    "PT", "PTH", "Q", "RET", "RSE", "RUF", "S", "SIM", "SLF", "T20", "TID", "TRY", "W",
    "UP",
]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ["S101"]

[tool.bumpversion]
current_version = "0.5.3"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = ["uv lock --upgrade-package wikipedia-bot", "git add uv.lock"]
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "tasks/__init__.py"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "uv"
