[project]
name = "bsoykabot"
version = "0.5.3"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "pywikibot>=10.2.0",
    "sentry-sdk>=2.32.0",
]

[dependency-groups]
dev = [
    "bump-my-version>=1.2.0",
    "hatchling>=1.27.0",
    "poethepoet>=0.36.0",
    "pre-commit>=4.2.0",
    "pylint>=3.3.7",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.2",
]

[project.scripts]
bsoykabot = "bsoykabot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.tasks]
bump = "bump-my-version bump"
check = "pre-commit run --all-files"
coverage = "pytest --cov=bsoykabot --cov-branch --cov-report=xml"
lock = "uv lock"
login = "pwb generate_user_files"
precommit = "pre-commit install"
run = "bsoykabot"
sync = "uv sync --all-extras --dev"
test = "pytest"

[tool.ruff]
preview = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY001", # Don't require file-level copyright notices.
    "COM812" # Ignore trailing commas. Causes conflicts between checker and formatter.
]
pydocstyle.convention = "google"
flake8-quotes.inline-quotes = "single"

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ["PLC2701", "S101"] # Allow private imports and assertions in test files.

[tool.bumpversion]
current_version = "0.5.3"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "chore: bump {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "chore: bump {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = ["uv lock --upgrade-package wikipedia-bot", "git add uv.lock"]
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "tasks/__init__.py"
